# device_ingenic

./: README.en.md  README.md
x2000/hardware/hals/communication/bluetooth/: BUILD.gn  CMakeLists.txt
x2000/hardware/hals/communication/bluetooth/frameworks/: BtMain.cpp  cscope.in.out  cscope.out  cscope.po.out  ohos_bt.c  tags
x2000/hardware/hals/communication/bluetooth/frameworks/ble/: BleProtocol.cpp
x2000/hardware/hals/communication/bluetooth/frameworks/incall/: InCall.cpp
x2000/hardware/hals/communication/bluetooth/frameworks/protocol/: DBHelper.cpp  SppProtocol.cpp  SyncData.cpp  SyncDataTools.cpp  SyncModule.cpp  UnBindModule.cpp
x2000/hardware/hals/communication/bluetooth/frameworks/sdk/: BluetoothController.cpp  BluetoothController.h  BluetoothServer.cpp  BluetoothServer.h  BluetoothUtils.h  Build.mk  HilinkModule.cpp  HilinkModule.h  HilinkServer.cpp  HilinkServer.h  ThirdPartyModule.cpp  ThirdPartyModule.h  ThirdPartyServer.cpp  ThirdPartyServer.h
x2000/hardware/hals/communication/bluetooth/frameworks/source/: app_ag.c  app_av.c  app_av_ipc.c  app_avk.c  app_ble.c  app_ble_server.c  app_dg.c  app_hs.c  app_manager.c  app_unit.c  ingenic_oss_input.c  ingenic_oss_output.c
x2000/hardware/hals/communication/bluetooth/frameworks/source/app_common/: app_disc.c  app_dm.c  app_link.c  app_mgt.c  app_xml_param.c  app_xml_utils.c
x2000/hardware/hals/communication/bluetooth/include/bt/: BtMain.h  app_ag.h  app_av.h  app_avk.h  app_ble.h  app_ble_server.h  app_dg.h  app_disc_cback.h  app_manager.h  ingenic_oss_input.h  ingenic_oss_output.h
x2000/hardware/hals/communication/bluetooth/include/bt/app_common/: app_disc.h  app_dm.h  app_link.h  app_mgt.h  app_utils.h  app_xml_param.h
x2000/hardware/hals/communication/bluetooth/include/bt/ble/: BleProtocol.h  LongSyncData.h
x2000/hardware/hals/communication/bluetooth/include/bt/incall/: InCall.h
x2000/hardware/hals/communication/bluetooth/include/bt/module/: AboutModule_Android.h  ContactsModule.h  ControlModule.h  LanguageModule.h  LiveModule.h  PhotoModule.h  PowerStorageModule.h  SettingModule_Android.h  Util.h
x2000/hardware/hals/communication/bluetooth/include/bt/protocol/: Cfg.h  DBHelper.h  Neg.h  SyncData.h  (+5 more)
x2000/hardware/hals/communication/bluetooth/include/cutils/: trace.h
x2000/hardware/hals/communication/bluetooth/include/libbsa/: bsa_dm_api.h  bta_api.h  bta_av_api.h  btm_ble_api.h  buildcfg.h
x2000/hardware/hals/communication/bluetooth/include/utils/: BufferedTextOutput.h  Compat.h  DiskSpaceUtil.h  Log.h  RefBase.h  SettingsDB.h  Thread.h  Unicode.h  Vector.h
x2000/hardware/hals/communication/wifi_lite/wifiservice/: BUILD.gn  wifiproxy.sh
x2000/hardware/hals/communication/wifi_lite/wifiservice/demo/: wifiDemo.cpp
x2000/hardware/hals/communication/wifi_lite/wifiservice/src/: wifiConfig.cpp  wifiConfig.hpp  wifiInterface.cpp  wifiInterface.hpp  wifiService.cpp  wifiService.hpp
x2000/u-boot/: BUILD.gn  Makefile  boards.cfg  build.sh
x2000/u-boot/arch/mips/cpu/xburst/: ddr_innophy.c
x2000/u-boot/arch/mips/cpu/xburst/x1521/: soc.c
x2000/u-boot/arch/mips/cpu/xburst/x1600/: Makefile  clk.c  pll_params_creator.c  soc.c  start.S  timer.c
x2000/u-boot/arch/mips/cpu/xburst2/: cpu.c  ddr_innophy.c  ddr_innophy_x2000.c  ddr_innophy_x2500.c  jz_serial.c
x2000/u-boot/arch/mips/cpu/xburst2/x2100/: clk.c
x2000/u-boot/arch/mips/cpu/xburst2/x2500/: clk_params_creator.c  soc.c
x2000/u-boot/arch/mips/include/asm/: ddr_innophy.h
x2000/u-boot/arch/mips/include/asm/arch-m300/: base.h
x2000/u-boot/arch/mips/include/asm/arch-x1600/: cpm.h  ost.h  wdt.h
x2000/u-boot/arch/mips/include/asm/arch-x2000_v12/: base.h
x2000/u-boot/arch/mips/include/asm/arch-x2100/: base.h
x2000/u-boot/arch/mips/lib/: bootm.c
x2000/u-boot/board/ingenic/gewu/: board.c
x2000/u-boot/board/ingenic/halley5/: board.c
x2000/u-boot/board/ingenic/panda/: board.c
x2000/u-boot/board/ingenic/robam_x2100/: board.c
x2000/u-boot/board/ingenic/smartpen/: board.c  partitions.tab
x2000/u-boot/common/spl/: Makefile  spl.c  spl_auto_args_mem.c  spl_jzsdhci.c  spl_mmc.c  spl_rtos.h  spl_sfc_nand_v2.c  spl_sfc_nor.c  spl_sfc_nor_v2.c
x2000/u-boot/drivers/gpio/jz_gpio/: x1600_gpio.c
x2000/u-boot/drivers/misc/: Makefile  hamming.c  x2000_efuse.c
x2000/u-boot/drivers/mmc/: jz_mmc.c  sdhci.c
x2000/u-boot/drivers/mtd/devices/jz_sfc/: Makefile  jz_sfc_nand.c  jz_sfc_nor.c
x2000/u-boot/drivers/mtd/devices/jz_sfc/nand_device/: fm_nand.c  foresee_nand.c
x2000/u-boot/drivers/mtd/devices/jz_sfc_v2/: Makefile  jz_sfc_common.c  jz_sfc_nand.c  jz_sfc_nor.c
x2000/u-boot/drivers/mtd/devices/jz_sfc_v2/nand_device/: gd_nand.c  mxic_nand.c
x2000/u-boot/drivers/net/: Makefile  SynopGMAC_Dev.c  jz_gmac_v12.c
x2000/u-boot/drivers/scboot/jz_sec_v1/: otp.c
x2000/u-boot/drivers/scboot/jz_sec_v2/: otp.c
x2000/u-boot/drivers/usb/gadget/: f_jz_cloner.c
x2000/u-boot/drivers/usb/gadget/cloner/: Makefile  cloner_efuse.c  cloner_module_spisfc.c
x2000/u-boot/include/: efuse.h
x2000/u-boot/include/cloner/: cloner.h
x2000/u-boot/include/configs/: burner_m200.h  burner_m300.h  burner_t20.h  burner_t21.h  burner_t30.h  burner_t31.h  burner_x1000.h  burner_x1021.h  burner_x1500.h  burner_x1520.h  burner_x1521.h  burner_x1630.h  burner_x1800.h  burner_x1830.h  burner_x2000.h  burner_x2000_v12.h  burner_x2100.h  burner_x2500.h  darwin.h  fullcolor.h  gander.h  gewu.h  halley5.h  hippo.h  huaby_x2100.h  kale.h  panda.h  robam_x2100.h  smartpen.h  wolf.h  x1021.h  x1521.h  x1630.h  x2000_base_common.h  x2000_evb.h  zebra.h
x2000/u-boot/include/ddr/: ddr_chips.h  ddr_chips_v2.h  ddr_common.h  ddr_params.h
x2000/u-boot/include/ddr/chips/: LVDDR_W9464L6KH-5I.h
x2000/u-boot/include/ddr/chips-v2/: DDR3_W631GU6NG.h  LPDDR2_SCB4BL256160AFL19GI.h  LPDDR3_NK6CL256M16DKX-H1.h  ddr_chip.h
x2000/u-boot/spl/: Makefile
x2000/u-boot/tools/ingenic-tools/: Makefile
x2000/u-boot/tools/ingenic-tools/ddr_creator_x2000/: add_chip_info.c  supported_ddr_chips.c
x2000/u-boot/tools/ingenic-tools/nand_device/: fm_nand.c  foresee_nand.c  nand_param.h
(+89 files in other folders)
