# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

rpath = rebase_path(root_out_dir, ohos_root_path)
shared_library("wifiservice") {
    sources = [ "src/wifiConfig.cpp","src/wifiInterface.cpp","src/wifiService.cpp"]
    cflags_cc = [ "-std=c++14","-Wall" ]
    include_dirs = [
        "//foundation/communication/wifi_lite/interfaces/wifiservice",
        "wpa_supplicant-2.9/include",
    ]
    deps = [
        ":wifiproxy"
    ]
}

copy("wifiproxy") {
    sources = [ "wifiproxy.sh" ]
    outputs = [ "$root_out_dir/usr/bin/wifiproxy.sh" ]
}

executable("wifidemo") {
    sources = [ "demo/wifiDemo.cpp"]
    cflags_cc = [ "-std=c++14","-Wall" ]
    include_dirs = [
        "//foundation/communication/wifi_lite/interfaces/wifiservice",
        "wpa_supplicant-2.9/include",
        "demo/libmenu/include"
    ]
    libs = [
        "demo/libmenu/lib/libconsole_menu.a",
    ]
    lib_dirs = [
        "wpa_supplicant-2.9/lib"
    ]
    ldflags = [
        "-lstdc++",
        "-lpthread",
        "-Wl,-rpath-link=$rpath/usr/lib",
        "-lwifiservice",
        "-lwpa_client"
    ]
    deps = [
        ":wifiservice"
    ]
}
